# lib/db/src/schema/panels.ts
@@ -30,6 +30,7 @@ export const panelsTable = pgTable("panels", {
   diagramOffsetX: real("diagram_offset_x").notNull().default(0.0),
   diagramOffsetY: real("diagram_offset_y").notNull().default(0.0),
   diagramOpacity: real("diagram_opacity").notNull().default(0.5),
+  diagramTint: text("diagram_tint"),
   gridOffsetX: integer("grid_offset_x").notNull().default(0),
   gridOffsetY: integer("grid_offset_y").notNull().default(0),
   columnWidths: integer("column_widths").array().notNull().default([]),
